--- a/GroupChess/test_3js/index.html
+++ b/GroupChess/test_3js/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.js"></script>
-    <script src="js/OBJLoader.js"
+    <script src="js/OBJLoader.js"></script>
     <!--<script src="/js/three.min.js"></script>-->
     <!--<script src="./js/StereoEffect.js"></script>-->
     <!--<script src="./js/DeviceOrientationControls.js"></script>-->
