--- a/GroupChess/test_3js/index.html
+++ b/GroupChess/test_3js/index.html
@@ -19,9 +19,6 @@
    var scene, camera, renderer;
    var geometry, material, mesh;
    var geometryBoard, materialBoard, meshBoard;
-   var quickBool, colorSwitch;
-
-   var colorWhite =
 
    init();
    for(i=0;i<8;i++){
@@ -69,43 +66,32 @@
 
        scene.add( mesh );
 
-//       Knight = null;
+       Knight = null;
 
-//       var loader = new THREE.OBJLoader();
-//       loader.load(
-//           'objects/Knight.OBJ',
-//           function ( object ) {
-//               Knight = object.children[0];
-//               Knight.position.x = 100;
-//               scene.add( Knight );
-//
-//               Knight.scale.x = 300;
-//               Knight.scale.y = 300;
-//               Knight.scale.z = 300;
-//           }
-//       );
+       var loader = new THREE.OBJLoader();
+       loader.load(
+           'objects/Knight.OBJ',
+           function ( object ) {
+               Knight = object.children[0];
+               Knight.position.x = 100;
+               scene.add( Knight );
+
+               Knight.scale.x = 100;
+               Knight.scale.y = 100;
+               Knight.scale.z = 100;
+
+               Knight.position.x = -437.5;
+               Knight.position.y = 130;
+               Knight.position.z = 437.5;
+           }
+       );
 
        renderer = new THREE.WebGLRenderer();
        renderer.setSize( window.innerWidth, window.innerHeight );
 
        document.body.appendChild( renderer.domElement );
 
-//       function board() {
 //
-//           geometryBoard = new THREE.BoxGeometry( 125, 200, 125);
-//           materialBoard = new THREE.MeshStandardMaterial( { color: 0xffffff } );
-//
-//
-//           meshBoard = new THREE.Mesh( geometryBoard, materialBoard );
-//
-//           meshBoard.position.x = 100;
-//
-//           scene.add( meshBoard );
-//
-//           console.log('hey thar');
-//
-//
-//       }
    }
     function board(modx,modz) {
 
