--- a/GroupChess/test_3js/index.html
+++ b/GroupChess/test_3js/index.html
@@ -65,7 +65,7 @@
                Knight.scale.z = 100;
 
                Knight.material.color.setHex(0xFF0000);
-
+               //test
                Knight.position.x = -437.5;
                Knight.position.y = 130;
                Knight.position.z = 437.5;
