--- a/GroupChess/test_3js/index.html
+++ b/GroupChess/test_3js/index.html
@@ -41,7 +41,7 @@
        camera.position.y = 800;
        camera.lookAt(new THREE.Vector3(0,0,0));
 
-       geometry = new THREE.BoxGeometry( 1000, 100, 1000);
+       geometry = new THREE.BoxGeometry( 1000, 30, 1000);
        material = new THREE.MeshStandardMaterial( { color: 0xff0000 } );
 
 
@@ -65,7 +65,7 @@
                Knight.scale.z = 100;
 
                Knight.material.color.setHex(0xFF0000);
-               //test
+
                Knight.position.x = -437.5;
                Knight.position.y = 130;
                Knight.position.z = 437.5;
@@ -99,7 +99,7 @@
 //           }
 //
 
-        geometryBoard = new THREE.BoxGeometry( 125, 125, 125);
+        geometryBoard = new THREE.BoxGeometry( 125, 20, 125);
 
 
         if((modx+modz)%2!==0){
@@ -109,6 +109,7 @@
         }
         meshBoard = new THREE.Mesh( geometryBoard, materialBoard );
 
+        meshBoard.position.y = 15;
         meshBoard.position.x = -437.5+125*modx;
         meshBoard.position.z = 437.5-125*modz;
 
