--- a/GroupChess/test_3js/index.html
+++ b/GroupChess/test_3js/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" type="text/css" href="overlay.css" media="screen" />
 
 <head>
     <meta charset="UTF-8">
@@ -12,8 +13,12 @@
     <title>Title</title>
 </head>
 <body>
-<div id="overlay">Testing</div>
+
 </body>
+<!--<div class="overlay"></div>-->
+
+<div class = "game">
+    <h1> test</h1>
 <script>
    console.log('hi');
    var scene, camera, renderer;
@@ -132,4 +137,5 @@
 
    }
 </script>
+</div>
 </html>
